db generator finis

--- a/html.html
+++ b/html.html
@@ -3,3 +3,12 @@
 
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, placeat laudantium. Eligendi tempora pariatur cumque earum quis eos distinctio nostrum alias suscipit corrupti, voluptates ipsam? Perspiciatis accusamus numquam, earum corporis sequi quis. Beatae nihil quae, rerum, unde in provident quibusdam asperiores quia ducimus similique distinctio exercitationem reiciendis. Eaque, rerum repudiandae!
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolores laboriosam ipsa aut rerum, facere eligendi nam quae eum deleniti ducimus repellendus voluptas accusamus commodi. Inventore, obcaecati! Consequuntur quisquam voluptas saepe eveniet, itaque incidunt. Laboriosam tenetur, sunt deleniti sint quae voluptate temporibus expedita impedit magnam, quisquam aliquid sed cum labore amet! Numquam, debitis nobis. Sint voluptatibus facilis laudantium facere deserunt aspernatur quo placeat dolorem ex, assumenda similique ut qui cumque nisi! Ipsum, iste autem aspernatur quaerat omnis, consequuntur laborum voluptatibus sed similique dolorum quasi, laudantium doloremque labore. Nostrum nisi voluptates eius quod inventore dolorem dignissimos aliquam facere animi, delectus aliquid.
+
+
+
+
+<?php $servername = "localhost"; $username = "username"; $password = "password"; $conn = new mysqli($servername, $username, $password); if ($conn->connect_error) { die("Connection failed: " . $conn->connect_error);} echo "Connected successfully"; ?>
+
+
+if ($conn->connect_error) { die("Connection failed: " . $conn->connect_error);
+} echo "Connected successfully"; ?>
